# APEX_replay

./: .gitignore  README.md  def_apex.h
old-bash-scripts/: run_decode.sh  run_decodeOnly.sh  run_fullReplay.sh  run_fullReplay_chunks.sh  run_fullReplay_range.sh  run_replayOnly.sh  run_replay_optics.sh  run_testReplay.sh  script-archiveRuns  script-archiveRuns~  script-driftModel  script-driftModel~  script-fullReplay  script-genCloud  script-genCloud~  script-genPoints  script-genPoints~  script-genTensorData  script-genTensorData~  script-genTrack  script-genTrack~  script-hadd  script-haddReplay  script-haddReplay.sh  script-haddReplay~  script-replay  script-replay-chunk  script-replay-chunk~  script-replay-partFile  script-replay-partFile~  script-replay-singleArm  script-replay-singleArm~  script-replayChunks  script-replayChunks~  script-replay~  script-run-cleanup  script-run-cleanup~  script-run-decode  script-run-decode~  script-run-find_S2_offset  (+8 more)
old-scripts/: function_lib.C  vdc_tracking_dataFrame.C  vdc_tracking_dataFrame_fork.C  vdc_tracking_dataFrame_genPts.C  vdc_tracking_genMonte.C  vdc_tracking_singleArm.C
old-src/: #TapexShower.cxx#  #UserModule.cxx#  ApexHRS.h  ApexHRS_LinkDef.h  ApexHRS_LinkDef.h~  ApexUtils.cxx  ApexUtils.cxx~  ApexUtils.h  ApexUtils.h~  CMakeLists.txt  CMakeLists.txt~  OpticsModel.h~  OpticsPolynomials.cxx  OpticsPolynomials.cxx~  OpticsPolynomials.h  OpticsPolynomials.h~  OpticsVectors.cxx  OpticsVectors.cxx~  OpticsVectors.h  OpticsVectors.h~  RMatrixD.cxx  RMatrixD.cxx~  RMatrixD.h  RMatrixD.h~  TNPoly.cxx  TNPoly.h  TNPoly.h~  TOpticsModel.cxx  TOpticsModel.cxx~  TOpticsModel.h  TOpticsModel.h~  TOpticsRays.cxx  TOpticsRays.cxx~  TOpticsRays.h  TOpticsRays.h~  (+13 more)
src/: ApexHRS.cxx  ApexHRS.cxx~  ApexHRS.h  ApexHRS.h~  CMakeLists.txt  LinkDef.h  TapexEventHandler.cxx  TapexEventHandler.h  TapexS2Hit.cxx  TapexS2Hit.h  TapexS2PMTOffsets.h  TapexVDCChamberPair.cxx  TapexVDCChamberPair.h  TapexVDCHit.cxx  TapexVDCHit.h  TapexVDCHitCluster.h  TapexVDCHitGroup.cxx  TapexVDCHitGroup.h  TapexVDCNamespace.cxx  TapexVDCNamespace.h  TapexVDCTrack.cxx  TapexVDCTrack.h
(+6 files in other folders)
